--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,17 +2,30 @@ body{
     background-color: antiquewhite;
 }
 
-div.topbox {
-    border: thin solid lightgreen;
-    background-color: white;
-    border-radius: 0.3rem;
+div#topbox {
     position: sticky;
     top: 3px;
     margin: 1rem;
     padding: 0.5rem;
+    display: flex;
+    justify-content: space-between;
     span {
-        margin: 0.3rem;
-        padding: 0.3rem;
-        border-radius: 0.3rem;
+        border: thin solid lightgreen;
+        background-color: white;
+        margin: 0.5rem;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        &:hover {
+            box-shadow: 0 0 0.2rem 0.1rem #a0a0a0 ;
+
+        }
     }
+}
+
+.requested {
+    box-shadow: 0 0 2rem 1rem lightgreen;
+}
+.failed {
+    box-shadow: 0 0 1rem 0.5rem lightcoral;
 }
