--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,31 +1,101 @@
-body{
-    background-color: antiquewhite;
+html{
+    font-size: 4mm;
+    h5 {
+        font-size: 1.1rem;
+    }
+    
+    h4 {
+        font-size: 1.2rem;
+    }
+    
+    h3 {
+        font-size: 1.3rem;
+    }
+    
+    h2 {
+        font-size: 1.4rem;
+    }
+    
+    h1 {
+        font-size: 1.5rem;
+    }
+}
+body {
+    background-color: #f0f0f0;
 }
 
 div#topbox {
     position: sticky;
     top: 3px;
-    margin: 1rem;
-    padding: 0.5rem;
+    margin: 0.2rem;
+    padding: 0.2rem;
     display: flex;
     justify-content: space-between;
+
     span {
         border: thin solid lightgreen;
         background-color: white;
-        margin: 0.5rem;
-        padding: 0.5rem;
-        border-radius: 0.5rem;
+        margin: 0.2rem;
+        padding: 0.3rem;
+        border-radius: 0.3rem;
         cursor: pointer;
+
         &:hover {
-            box-shadow: 0 0 0.2rem 0.1rem #a0a0a0 ;
+            box-shadow: 0 0 0.2rem 0.1rem #a0a0a0;
 
         }
+    }
+}
+
+div.boxed {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+
+    div {
+        border: thin solid red;
+        border-radius: 0.5rem;
+        margin: 0.2rem;
+        padding: 0.5rem;
+        min-width: 10rem;
+        min-height: 3rem;
+        background-color: blanchedalmond;
     }
 }
 
 .requested {
     box-shadow: 0 0 2rem 1rem lightgreen;
 }
+
 .failed {
     box-shadow: 0 0 1rem 0.5rem lightcoral;
+}
+
+div.table {
+    border: thin solid #d0d0d0;
+    border-radius: 0.5rem;
+    display: table;
+    margin: 1rem;
+    padding: 0.5rem;
+    .right {
+        text-align: right;
+    }
+    div.row {
+        border: thin solid green;
+        border-radius: 1rem;
+        display: table-row;
+        margin: 0.7rem;
+        padding: 0.3rem;
+        span {
+            margin: 0.5rem;
+            padding: 0.2rem;
+            display: table-cell;
+            border: thin solid red;
+            border-radius: 0.3rem;
+        }
+        span.wide {
+            background-color: #e0e0e0;
+            min-width: 30rem;
+        }
+    }
 }
