--- a/sass/main.scss
+++ b/sass/main.scss
@@ -105,6 +105,9 @@ div.table {
             border-radius: 0.3rem;
             padding: 0.3rem;
         }
+        select {
+            width: 100%;
+        }
     }
 }
 
