--- a/sass/main.scss
+++ b/sass/main.scss
@@ -111,23 +111,25 @@ div.table {
     }
 }
 div#hierarchy {
-    // background-color: antiquewhite;
-    // border: thin solid #d0d0d0;
-    // border-radius: 1rem;
     padding: 1rem;
+    width: max-content;
     div {
-        margin-left: 1rem;
+        margin-left: 0.5rem;
+        border: thin solid #a0a0a0;
+        border-radius: 0.3rem;
+        margin-top: 0.2rem;
+        padding: 0.5rem;
     }
-    div:last-child::before {
-        content: '└ ';
-        color: black;
+}
+table {
+    border: thin solid #d0d0d0;
+    border-collapse: collapse;
+    .right{
+        text-align: right;
     }
-    div:not(:last-child)::before {
-        content: '├ ';
-        color: black;
-    }
-    > div:not(.dummy)::before {
-        content: '• ';
-        color: black;
+    th,td {
+        border: thin solid #a0a0a0;
+        border-collapse: collapse;
+        padding: 0.5rem;
     }
 }
